examples/example-deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example-golang-app
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: example-golang-app
    spec:
      containers:
      - name: example-golang-app
        imagePullPolicy: Always
        image: registry.default:5000/gitadmin/example-golang-app:RELEASE
        ports:
        - containerPort: 5000
