examples/example-deployment/example-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-golang-app-svc
spec:
  selector:
    app: example-golang-app
  ports:
  - name: web
    port: 5000
